package NKikimrClient;
option java_package = "ru.yandex.kikimr.proto";

message THealthRequest {
    optional uint64 DeadlineInstantMs = 1;
    optional uint64 Cookie = 2;
}

// must start from TResponseBase
message THealthResponse {
    optional uint32 Status = 1; // EResponseStatus from ydb/core/client/base/msgbus.h
    optional bytes ProtobufError = 400;

    optional uint64 Cookie = 2;
    optional string ErrorReason = 3; // When present contains human-readable error description
}

